--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  background-color: #66ff66;
 }
 body {
   display: flex;
@@ -12,6 +13,7 @@ body {
   border-radius: 15px;
   border: 1px solid #80ff80;
   margin: auto;
+  background-color: #006622
 }
 .container {
   padding: 15px;
