--- a/css/menu.css
+++ b/css/menu.css
@@ -24,8 +24,8 @@ body{
 .content {
     float:left;
     width: 80%;
-    margin:20px;
     text-align: center;
+    display: block;
 }
 .putCenter {
     margin:  0 auto;
@@ -36,4 +36,30 @@ body{
 
 .buttonStyle {
     margin: 10px auto;
+}
+button {
+    background-image: linear-gradient(to bottom, #006622, #4dff88);
+    color: white;
+    padding: 14px 40px;
+    text-align: center;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+}
+input[type="text"],
+input[type="password"]{
+    background-color: #d9d9d9;
+    width: 20%;
+    padding: 10px;
+    display: inline-block;
+    box-sizing: border-box;
+    border-radius: 15px;
+    border: none;
+    color: #00cc00;
+}
+h2{
+    color: green;
+}
+h1{
+    color: white;
 }
