--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ input[type="password"] {
   color: #00ff00;
 }
 button {
-  background-image: linear-gradient(to bottom, #006622, #4dff88);
+  background-image: linear-gradient(to bottom, #0047b3, #80b3ff);
   color: white;
   padding: 14px 40px;
   text-align: center;
@@ -49,7 +49,7 @@ button:hover {
   width: 100%;
 }
 h2 {
-  color: #008000;
+  color: black;
   text-align: center;
 }
 .required label:after {
@@ -61,10 +61,15 @@ h2 {
   text-align: center;
 }
 a:hover {
-    color: green;
-    text-decoration: underline;
+  color: #003380;
+  text-decoration: underline;
 }
 a{
-    text-decoration: none;
-    color: lightgreen;
+  text-decoration: none;
+}
+label {
+  color:#262626;
+}
+#label-link{
+  color: #0047b3;
 }
