--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
 
 #innerForm{
   height: 232px;
-  width: 70%;
+  width: 60%;
   background-color: white;
 }
 #welcomeText{
@@ -39,19 +39,32 @@ body{
 }
 input[type="text"],
 input[type="password"] {
-  width: 193px;
+  width: 100%;
   height: 23px;
   border-radius: 2px;
   background-color: #ffffff;
-  border: 1px solid #fca311;
+  border: 1px solid black;
   box-shadow: 0 5px 5px rgba(0,0,0,0.3);
 }
 button {
   width: 193px;
   height: 23px;
   border-radius: 8px;
+  font-size: 14px;
   border: 1px solid #fca311;
   background-color: #fca311;
+}
+#registerLink {
+  font-family: Arial;
+  text-decoration: underline;
+  font-size: 13px;
+  font-weight: bold;
+}
+a:link{
+  color: black;
+}
+#divPadding{
+  padding-top: 10px;
 }
 
 
