--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@ body{
   display: flex;
   background-color: #eeeeee;
 }
-#mainForm{
+.mainForm{
   height: 332px;
   width: 326px;
-  margin: auto;
+  margin: 130px auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,12 +22,12 @@ body{
   border-bottom: 5px solid #fca311;
 }
 
-#innerForm{
-  height: 232px;
-  width: 60%;
-  background-color: white;
+.innerForm{
+  align-self: center;
+  padding: 0;
+  background-color: grey;
 }
-#welcomeText{
+.welcomeText{
   font-size: 22px;
   color: #000000;
   font-family: "Arial";
@@ -47,7 +47,7 @@ input[type="password"] {
   box-shadow: 0 5px 5px rgba(0,0,0,0.3);
 }
 button {
-  width: 193px;
+  width: 100%;
   height: 23px;
   border-radius: 8px;
   font-size: 14px;
@@ -63,7 +63,7 @@ button {
 a:link{
   color: black;
 }
-#divPadding{
+.labelDesign{
   padding-top: 10px;
 }
 
