--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: "Arial";
+  font-family: "Arial","Times New Roman", serif;
 }
 body{
   display: flex;
@@ -28,12 +28,12 @@ body{
 .welcomeText{
   font-size: 22px;
   color: #000000;
-  font-family: "Arial";
+  font-family: "Arial","Times New Roman", serif;
 }
 #labelText{
   font-size: 12px;
   color: #14213d;
-  font-family: "Arial";
+  font-family: "Arial","Times New Roman", serif;
 }
 input[type="text"],
 input[type="password"] {
@@ -53,7 +53,7 @@ button {
   background-color: #fca311;
 }
 #registerLink {
-  font-family: Arial;
+  font-family: Arial,"Times New Roman", serif;
   text-decoration: underline;
   font-size: 13px;
   font-weight: bold;
