--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: "Arial","Times New Roman", serif;
+  font-family: "Arial MT","Times New Roman", serif;
 }
 body{
   display: flex;
@@ -15,25 +15,29 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3), inset 0 -5px 0 #fca311, inset 0 5px 0 #fca311;
   background-color: #ffffff;
   border-top: 3px solid #fca311;
   border-bottom: 5px solid #fca311;
 }
-
 .innerForm{
-  margin: 20px;
-  background-color: grey;
+  margin: 50px;
+  background-color: white;
 }
 .welcomeText{
   font-size: 22px;
-  color: #000000;
-  font-family: "Arial","Times New Roman", serif;
+  color: #14213d;
+  font-family: "Arial MT","Times New Roman", serif;
+  font-weight: 400;
+  padding-bottom: 45px;
 }
 #labelText{
+  width: 50px;
+  height: 12px;
   font-size: 12px;
   color: #14213d;
-  font-family: "Arial","Times New Roman", serif;
+  font-weight: 400;
+  font-family: "Arial MT","Times New Roman", serif;
 }
 input[type="text"],
 input[type="password"] {
@@ -41,29 +45,57 @@ input[type="password"] {
   height: 23px;
   border-radius: 2px;
   background-color: #ffffff;
-  border: 1px solid black;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+  border: 1px solid #14213d;
+  
 }
 button {
   width: 100%;
-  height: 23px;
+  height: 30px;
   border-radius: 8px;
   font-size: 14px;
   border: 1px solid #fca311;
   background-color: #fca311;
+  background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
 }
 #registerLink {
-  font-family: Arial,"Times New Roman", serif;
+  width: 46px;
+  height: 12px;
+  color: #000000;
+  font-family: "Arial MT","Times New Roman", serif;
   text-decoration: underline;
-  font-size: 13px;
-  font-weight: bold;
+  font-size: 12px;
+  font-weight: 400;
 }
 a:link{
   color: black;
 }
 .labelDesign{
-  padding-top: 10px;
+  padding-top: 18px;
 }
-
+.loginDesignButton{
+  padding-top: 25px;
+}
+.registerDesignStyle{
+  padding-top: 17px;
+}
+.loginDesignText{
+  width: 35px;
+  height: 14px;
+  font-family: "Arial MT";
+  font-size: 14px;
+  font-weight: bold;
+}
+.registerDesignText{
+  width: 46px;
+  height: 12px;
+  color: #000000;
+  font-family: "Arial MT","Times New Roman", serif;
+  font-size: 12px;
+  font-weight: 400;
+  text-decoration: underline;
+}
+.usernameLabel{
+  padding-top:15px;
+}
 
 
