--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,55 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  font-family: "Arial MT","Times New Roman", serif;
-}
 body{
   display: flex;
   background-color: #eeeeee;
 }
-.mainForm{
-  width: 226px;
-  margin: auto;
+.container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.popup {
+  width: 226px;
+  background: white;
+  padding: 50px;
   box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3), inset 0 -5px 0 #fca311, inset 0 5px 0 #fca311;
-  background-color: #ffffff;
-  border-top: 3px solid #fca311;
+  border-top: 5px solid #fca311;
   border-bottom: 5px solid #fca311;
 }
-.innerForm{
-  margin: 50px;
-  background-color: white;
+.login{
+  display: block;
 }
-.headingText{
+.login .heading {
   font-size: 22px;
   color: #14213d;
-  font-family: "Arial MT","Times New Roman", serif;
+  font-family: "Arial MT", "Times New Roman", serif;
   font-weight: 400;
-  padding-bottom: 45px;
 }
-#labelText{
+.field {
+  margin-top: 10px;
+}
+.field .label {
   width: 50px;
-  height: 12px;
-  font-size: 12px;
+  height: 14px;
+  display: block;
+  font-size: 14px;
   color: #14213d;
   font-weight: 400;
-  font-family: "Arial MT","Times New Roman", serif;
+  font-family: "Arial MT", "Times New Roman", serif;
 }
-input[type="text"],
-input[type="password"] {
+.field .input {
   width: 100%;
   height: 23px;
   border-radius: 2px;
   background-color: #ffffff;
   border: 1px solid #14213d;
-  
 }
-button {
+.login .button {
   width: 100%;
   height: 30px;
   border-radius: 8px;
@@ -57,55 +58,9 @@ button {
   background-color: #fca311;
   background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
 }
-#registerLink {
-  width: 46px;
-  height: 12px;
-  color: #000000;
-  font-family: "Arial MT","Times New Roman", serif;
+.link {
+  color: black;  
+}
+.register {
   text-decoration: underline;
-  font-size: 12px;
-  font-weight: 400;
-}
-a:link{
-  color: black;
-}
-.labelDesign{
-  padding-top: 18px;
-}
-.loginDesignButton{
-  padding-top: 25px;
-}
-.registerDesignStyle{
-  padding-top: 17px;
-}
-.loginDesignText{
-  width: 35px;
-  height: 14px;
-  font-family: "Arial MT","Times New Roman", serif;;
-  font-size: 14px;
-  font-weight: bold;
-}
-.registerDesignText{
-  width: 46px;
-  height: 12px;
-  color: #000000;
-  font-family: "Arial MT","Times New Roman", serif;
-  font-size: 12px;
-  font-weight: 400;
-  text-decoration: underline;
-}
-.styleLabel{
-  padding-top:15px;
-}
-.required label:after {
-  content: " *";
-  color: black;
-}
-input[type="button"].buttonRegister {
-  height: 30px;
-  border-radius: 8px;
-  font-size: 14px;
-  border: 1px solid #fca311;
-  background-color: #fca311;
-  background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
 }
