--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   display: flex;
   background-color: #eeeeee;
+  font-family: "Arial", "Times New Roman", serif;
 }
 .container {
   position: fixed;
@@ -27,27 +28,25 @@ body{
 .login .heading {
   font-size: 22px;
   color: #14213d;
-  font-family: "Arial MT", "Times New Roman", serif;
   font-weight: 400;
+  margin: 0;
 }
 .field {
   margin-top: 10px;
 }
 .field .label {
-  width: 50px;
   height: 14px;
   display: block;
   font-size: 14px;
   color: #14213d;
   font-weight: 400;
-  font-family: "Arial MT", "Times New Roman", serif;
 }
 .field .input {
   width: 100%;
   height: 23px;
   border-radius: 2px;
   background-color: #ffffff;
-  border: 1px solid #14213d;
+  border: 1px solid #fca311;
 }
 .login .button {
   width: 100%;
@@ -63,4 +62,7 @@ body{
 }
 .register {
   text-decoration: underline;
+}
+.buttonAction{
+  cursor: pointer;
 }
