--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
   height: 23px;
   border-radius: 2px;
   background-color: #ffffff;
-  border: 1px solid #fca311;
+  border: 1px solid #14213d;
 }
 .input:focus {
     border: 1px solid #fca311;
