--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body{
 .login{
   display: block;
 }
+.login2{
+  display: inline-block;
+}
 .login .heading {
   font-size: 22px;
   color: #14213d;
@@ -53,6 +56,16 @@ body{
 }
 .login .button {
   width: 100%;
+  height: 30px;
+  font-size: 14px;
+  border-radius: 8px;
+  border: 1px solid #fca311;
+  background-color: #fca311;
+  background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+  outline:none;
+}
+.login .buttonRegister {
+  width: 50%;
   height: 30px;
   font-size: 14px;
   border-radius: 8px;
