--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ body{
   background-color: #ffffff;
   border: 1px solid #14213d;
 }
+.field h3 {
+  text-align: right;
+}
 .input:focus {
   border: 1px solid #fca311;
   outline: none;
@@ -64,22 +67,13 @@ body{
   background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
   outline:none;
 }
-.login .buttonRegister {
-  width: 50%;
-  height: 30px;
-  font-size: 14px;
-  border-radius: 8px;
-  border: 1px solid #fca311;
-  background-color: #fca311;
-  background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-  outline:none;
-}
 .link {
   color: black;  
 }
 .register {
   text-decoration: underline;
   font-size: 16px;
+  
 }
 .buttonAction{
   cursor: pointer;
