--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #eeeeee;
     font-family: "Arial", "Times New Roman", serif;
+    font-size: 14px;
 }
 
 .main-page-container {
@@ -33,7 +34,7 @@ body {
     font-weight: 400;
 }
 
-.input-form__field_common {
+.input-form__field {
     margin-top: 10px;
     display: block;
     font-size: 14px;
@@ -66,16 +67,16 @@ body {
 .input-form__button {
     width: 100%;
     height: 30px;
-}
-
-.input-form__button_orange {
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
+    cursor: pointer;
+}
+
+.input-form__button_orange { 
     border: 1px solid #fca311;
     background-color: #fca311;
     background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
-    outline: none;
-    cursor: pointer;
 }
 
 .input-form_link {
@@ -88,9 +89,6 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-    body {
-        background-color: #eeeeee;
-    }
 
     .input-form {
         width: 100%;
@@ -101,7 +99,7 @@ body {
         font-size: 28px;
     }
 
-    .input-form__field_common {
+    .input-form__field {
         margin-top: 25px;
     }
 
