--- a/css/propertiesPage1.css
+++ b/css/propertiesPage1.css
@@ -149,20 +149,15 @@ html, body {
 
 input {
     margin: 0;
-    border: none;
-    border-radius: 0;
-    /* width: 75%; */
-    padding: 10px;
     float: left;
-    font-size: 16px;
 }
 
 /* --propertiesPage2.css */
 
 body {
     background-color: #fafafa;
-    color: #757575;
-    font-family: 'Consolas', Arial, Helvetica, sans-serif;
+    color: black;
+    font-family: sans-serif;
     margin: 0;
 }
 
@@ -176,7 +171,7 @@ button {
     background: 0 0;
     border: none;
     border-radius: 2px;
-    color: #757575;
+    color: black;
     position: relative;
     height: 36px;
     margin: 0;
@@ -214,23 +209,6 @@ input {
     padding: .5em;
     border-radius: 2px;
     border: 1px solid lightgray;
-    outline: none;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-    color: white;
-    background-color: #f0db4f;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-header h1 {
-    display: inline-block;
-    color: #323330;
-    margin: 1rem auto;
 }
 
 /* Todo Item */
@@ -271,7 +249,6 @@ header h1 {
 
 #todo-form {
     display: flex;
-    /*background-color: #FAFAFA; */
     border-top: 1px solid rgba(0, 0, 0, .1);
     padding: 10px;
 }
@@ -377,9 +354,6 @@ header h1 {
         font-size: 28px;
         font-weight: 400;
         margin-bottom: 20px;
-    }
-    .input-form__profile {
-        width: 0;
     }
     /* -- propertiesPage2.css -- */
     .input-form__profile {
